tests/test_exception/bad/ambiguous_unlabeled_exception.catala_en
## Test

```catala
declaration scope A:
  context x content integer

scope A:
  definition x equals 0

  definition x equals 1

  exception
  definition x equals 2
```

```catala-test-inline
$ catala Interpret -s A
[ERROR]
This exception can refer to several definitions. Try using labels to disambiguate

Ambiguous exception
┌─⯈ ambiguous_unlabeled_exception.catala_en:12.3-13.15:
└──┐
12 │   exception
   │   ‾‾‾‾‾‾‾‾‾
13 │   definition x equals 2
   │   ‾‾‾‾‾‾‾‾‾‾‾‾
   └─ Test

Candidate definition
┌─⯈ ambiguous_unlabeled_exception.catala_en:10.14-10.15:
└──┐
10 │   definition x equals 1
   │              ‾
   └─ Test

Candidate definition
┌─⯈ ambiguous_unlabeled_exception.catala_en:8.14-8.15:
└─┐
8 │   definition x equals 0
  │              ‾
  └─ Test
#return code 123#
```
